--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-angular",
-  "version": "0.12.1",
-  "description": "Yeoman generator for AngularJS",
+  "name": "generator-angular-identor",
+  "version": "1.0.0",
+  "description": "Yeoman generator for AngularJS by Identor",
   "keywords": [
     "yeoman-generator",
     "scaffold",
@@ -11,7 +11,7 @@
     "app",
     "angular"
   ],
-  "author": "The Yeoman Team",
+  "author": "Irvin Denzel Torcuato",
   "main": "app/index.js",
   "files": [
     "app",
@@ -32,7 +32,7 @@
     "script-base.js",
     "util.js"
   ],
-  "repository": "yeoman/generator-angular",
+  "repository": "identor/generator-angular",
   "scripts": {
     "test": "mocha"
   },
